移除了聊天行之间的空隙